[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_objects/player/script/player.gd" type="Script" id=1]
[ext_resource path="res://game_objects/player/componets/scripts/attributes.gd" type="Script" id=2]
[ext_resource path="res://game_objects/player/componets/scripts/player_flags.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/player/playerShip1_blue.png" type="Texture" id=4]
[ext_resource path="res://game_objects/player/componets/scripts/contetion.gd" type="Script" id=5]

[node name="player" type="Node2D"]
script = ExtResource( 1 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="attributes" type="Node" parent="."]
script = ExtResource( 2 )
_velocity = 200

[node name="player_flags" type="Node" parent="."]
script = ExtResource( 3 )

[node name="contetion" type="Node" parent="."]
script = ExtResource( 5 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -5, -5, 10, 10 )

[connection signal="screen_entered" from="visibility" to="contetion" method="_on_visibility_screen_entered"]
[connection signal="screen_exited" from="visibility" to="contetion" method="_on_visibility_screen_exited"]
